[package]
name = "longshot"
version = "1.0.0"
authors = ["Peter Edge <edge.peterj@gmail.com>"]

[dependencies]
bio = "0.25.0"
rust-htslib = "0.46.0"
clap = "2.26.2"
chrono = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
error-chain = "0.12.0"
fishers_exact = "1.0.1"
hashbrown = "0.11"

[build-dependencies]
cc = "1.0"

#[profile.release]
#debug = true       # (u32 or bool) Include debug information (debug symbols).
